# pbd-crowd-sim

./: CMakeLists.txt  README.md  makecrowds
src/: crowds_cpu_orginal.cpp  crowds_cpu_orginal.cu
